--- a/telescope/assets/services/zeek.service
+++ b/telescope/assets/services/zeek.service
@@ -5,7 +5,7 @@ After=network.target
 Restart=always
 RestartSec=30
 ExecStartPre=/bin/mkdir -p /var/spool/zeek/
-ExecStart=/usr/local/bin/zeek -i en0 -C LogAscii::use_json=T LDAP::default_log_search_attributes=T  Log::default_logdir=/var/spool/zeek
+ExecStart=/opt/zeek/bin/zeek -i eth0 -C LogAscii::use_json=T LDAP::default_log_search_attributes=T  Log::default_logdir=/var/spool/zeek
 ExecStop=/bin/kill -s TERM $MAINPID
  
 [Install]
